--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,8 @@
-// TODO
+
+.contentContainer{
+  box-sizing: border-box;
+  padding: 50px 0;
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
