--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,11 @@
-// TODO
+.loadMoreButton{
+  color: var(--pink-500);
+  background: none;
+  border: 0;
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 30px;
+  &:hover{
+    text-decoration: underline;
+  } 
+}
