--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,53 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --white: #ffffff;
+  --gray-100: #E1E1E6;
+  --gray-300: #a8a8b3;
+  --gray-700: #323238;
+  --gray-800: #29292e;
+  --gray-850: #1f2729;
+  --pink-500: #FF57B2;
+  --gray-900: #121214;
+
+  --cyan-500: #61dafd;
+  --yellow-500: #EBA417;
+
+  @media (max-width: 1080px) {
+    html: {
+      font-size: 93.75%;
+    }
+  }
+
+  @media (max-width: 720px) {
+    html: {
+      font-size: 87.5%;
+    }
+  }
+}
+
+body {
+  background: var(--gray-900);
+  color: var(--white);
+  max-width: 1120px;
+  min-height: 105px;
+  margin: auto;
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Inter", "sans-serif";
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
