--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -11,7 +11,7 @@
 .postDetail{
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
+  margin: 20px 0;
   time{
     color: var(--gray-300);
     margin-right: 15px;
