--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,38 @@
-// TODO
+.preview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 25rem;
+  img {
+    width: auto;
+    max-width: 100%;
+    max-height: 25rem;
+  }
+}
+
+.contentContainer {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  .sectionContent {
+    h3:first-child {
+      margin-top: 2rem;
+    }
+    h3 {
+      margin-bottom: 2rem;
+    }
+    .content {
+      line-height: 2rem;
+      a {
+        color: var(--highlight);
+      }
+    }
+  }
+
+  h1 {
+    font-size: 3rem;
+    color: var(--heading);
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+  }
+}
